Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignBoolObjUndefinedField.quorum
class Main
    Boolean v = undefined
    action Main
        Test(v)
    end

    action Test(Boolean var)
        if var = undefined
            output "passed"
        end
    end
end
