Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBoolObjTextWrapped.quorum
class main
    action Main
        Boolean b = "what?"
    end
end